--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         @keyframes fill {
             from {
                 transform: scale(0);
-                background: rgb(11, 25, 37);
+                background: #0b1925;
             }
             to {
-                background: rgb(9, 10, 34)
+                background: #090a22
             }
         }
     </style>
